:wheelchair: fix low contrast lighthouse score (irony)

--- a/src/scss/speedlify-score.scss
+++ b/src/scss/speedlify-score.scss
@@ -14,7 +14,6 @@ speedlify-score {
 	justify-content: center;
 	border-radius: 50%;
 	border: 2px solid #0cce6b;
-	color: #088645;
 	margin-left: 8px;
 }
 .speedlify-score-ok {
